Admin added. Role system updated.

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -27,19 +27,19 @@ server {
     }
 
     # Serve Django backend static files
-    location /static/ {
+    location ^~ /static/ {
         alias /app/staticfiles/;
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
 
     # Serve Django backend media files
-    location /media/ {
+    location ^~ /media/ {
         alias /app/media/;
     }
 
     # API proxy
-    location ~ ^/(api|swagger|redoc)/ {
+    location ~ ^/(api|swagger|redoc|admin)/ {
         proxy_pass http://backend:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
