--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     ports:
       - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-postgres}"]
+      test: [ "CMD-SHELL", "pg_isready -U ${DB_USER:-postgres}" ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -63,6 +63,9 @@ services:
       - backend
     environment:
       - VITE_API_BASE_URL=http://localhost:8000/api
+    volumes:
+      - static_volume:/app/staticfiles
+      - media_volume:/app/media
     networks:
       - karagah_network
     restart: unless-stopped
@@ -72,7 +75,7 @@ volumes:
   static_volume:
   media_volume:
 
+
 networks:
   karagah_network:
     driver: bridge
-
